[package]
name = "gunter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
aws-config = "0.6.0"
aws-sdk-ssm = "0.6.0"
egg-mode = { version = "0.16.0", features = ["rustls_webpki"], default-features = false }
lambda_runtime = "0.4"
rand = "0.8.4"
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
tokio = "1.6"
